# Rbdl_examples_code

./: README.md
rbdl_using/: CMakeLists.txt  MAIN.cpp
rbdl_using/lib/rbdl/: rbdl_config.h
rbdl_using/model/: DynModel.cpp  DynModel.hpp  KinModel.cpp  KinModel.hpp  RobotDefinition.hpp  RobotModel.cpp  RobotModel.hpp
rbdl_using/urdf/: aliengo.urdf
rbdl_using/utils/: common_convert_calcu.cpp  common_convert_calcu.hpp  pseudo_inverse.hpp
